# microsoftsam

./: .env.example  .gitignore  .gitmodules  IMPLEMENTATION.md  Makefile  README.md  TODO.md  config.example.yaml  config.min-latency.yaml  config.multi-persona.example.yaml  config.sauron.yaml  docker-compose.yml  flake.nix  mumble_tts_bot.py  parrot_bot.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: better-speech.md  latency-plan.md  perf.md  plan-coverage.md  plan-human.md  pluggable-plan.md  refactor.md  streaming-plan.md  wyoming-implementation.md  wyoming.md
mumble_tts_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mumble_voice_bot/: __init__.py  audio.py  bot.py  cli.py  config.py  conversation_state.py  coordination.py  events.py  factory.py  handlers.py  latency.py  logging_config.py  multi_persona_config.py  perf.py  phrase_chunker.py  pipeline.py  souls.py  speech_filter.py  streaming_pipeline.py  text_processing.py  transcript_stabilizer.py  turn_controller.py  utils.py
mumble_voice_bot/brains/: __init__.py  adaptive.py  echo.py  llm.py  reactive.py
mumble_voice_bot/interfaces/: __init__.py  brain.py  events.py  llm.py  services.py  stt.py  tool_formatter.py  tts.py
mumble_voice_bot/providers/: __init__.py  luxtts.py  mumble_events.py  nemotron_stt.py  openai_llm.py  sherpa_nemotron.py  streaming_asr.py  wyoming_stt.py  wyoming_tts.py  wyoming_tts_server.py
mumble_voice_bot/tools/: __init__.py  base.py  registry.py  souls.py  sound_effects.py  web_search.py
nix/: opuslib-paths.patch
personalities/: advisor.md  default.md  imperial.md
prompts/: default.md
scripts/: analyze_latency.py  qwen3_tts_demo.py  qwen3_tts_vllm.py  run-sauron.sh  setup_qwen3_tts.py  test_nemotron.py
souls/: README.md
souls/adjutant/: personality.md  soul.yaml
souls/adjutant/audio/: .gitkeep
souls/adjutant/weights/: .gitkeep
souls/arnold/: personality.md  soul.yaml
souls/example/: personality.md  soul.yaml
souls/example/audio/: .gitkeep
souls/example/weights/: .gitkeep
souls/imperial-guard/: soul.yaml
souls/imperial-guard/audio/: .gitkeep
souls/imperial-guard/weights/: .gitkeep
souls/knight/: personality.md  soul.yaml
souls/potion-seller/: personality.md  soul.yaml
souls/raf/: personality.md  soul.yaml
souls/zapp/: personality.md  soul.yaml
tests/: __init__.py  conftest.py  test_brains.py  test_config.py  test_context_preservation.py  test_conversation_state.py  test_coordinator.py  test_fillers_events.py  test_handlers.py  test_integration.py  test_interruption.py  test_multi_persona.py  test_multi_persona_config.py  test_mumble_bot.py  test_mumble_events.py  test_openai_llm.py  test_perf_improvements.py  test_pipeline.py  test_souls_tool.py  test_sound_effects.py  test_speech_filter.py  test_streaming_asr.py  test_tool_formatter.py  test_tools.py  test_tts_sanitize.py  test_turn_controller.py  test_web_search.py  test_wyoming_stt.py  test_wyoming_tts.py  test_wyoming_tts_server.py
