[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mumble-tts-bot"
version = "0.1.0"
description = "A Mumble bot that reads text messages aloud using LuxTTS voice cloning"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Sam"}
]
keywords = ["mumble", "tts", "voice", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy",
    "scipy",
    "protobuf",
    "soundfile",
    "torch",
    "torchaudio",
    "transformers<=4.57.6",
    "huggingface-hub",
    "safetensors",
    "librosa",
    "pydub",
    "opuslib-next",
    # LuxTTS dependencies
    "lhotse",
    "tensorboard",
    "vocos",
    "onnxruntime",
    # Normalization
    "cn2an",
    "inflect",
    # Tokenization
    "jieba",
    "pypinyin",
    "piper-phonemize",
    "setuptools<81",
    # LinaCodec dependencies
    "jsonargparse[signatures]",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
mumble-tts-bot = "mumble_tts_bot:main"

[tool.setuptools]
py-modules = ["mumble_tts_bot"]
# Include vendored pymumble_py3 in the package path
package-dir = {"pymumble_py3" = "vendor/botamusique/pymumble_py3"}

[tool.uv]
# Use find-links for piper-phonemize which has wheels on a separate index
find-links = ["https://k2-fsa.github.io/icefall/piper_phonemize.html"]
