[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mumble-tts-bot"
version = "0.1.0"
description = "A Mumble bot that reads text messages aloud using LuxTTS voice cloning"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Sam"}
]
keywords = ["mumble", "tts", "voice", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy",
    "scipy",
    "protobuf>=6.0.0",
    "soundfile",
    "torch",
    "torchaudio",
    "transformers<=4.57.6",
    "huggingface-hub",
    "safetensors",
    "librosa",
    "pydub",
    "opuslib-next",
    # LuxTTS dependencies
    "lhotse",
    "tensorboard",
    "vocos",
    "onnxruntime",
    # Normalization
    "cn2an",
    "inflect",
    # Tokenization
    "jieba",
    "pypinyin",
    "piper-phonemize",
    "setuptools<81",
    # LinaCodec dependencies
    "jsonargparse[signatures]",
    "tqdm",
    # LLM integration
    "httpx>=0.27",
    "pyyaml>=6.0",
    # Wyoming protocol
    "wyoming>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
# Streaming ASR providers (for low-latency speech recognition)
nemotron = [
    "nemo_toolkit[asr]>=2.0.0",
]
sherpa = [
    "sherpa-onnx>=1.10.0",
]
# Install all streaming ASR options
streaming-asr = [
    "nemo_toolkit[asr]>=2.0.0",
    "sherpa-onnx>=1.10.0",
]

[project.scripts]
mumble-tts-bot = "mumble_tts_bot:main"
wyoming-luxtts = "mumble_voice_bot.providers.wyoming_tts_server:main"

[tool.setuptools]
py-modules = ["mumble_tts_bot"]
packages = ["mumble_voice_bot", "mumble_voice_bot.interfaces", "mumble_voice_bot.providers"]
# Include vendored pymumble_py3 in the package path
package-dir = {"pymumble_py3" = "vendor/botamusique/pymumble_py3"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=mumble_voice_bot --cov-report=term-missing"

[tool.uv]
# Use find-links for piper-phonemize which has wheels on a separate index
find-links = ["https://k2-fsa.github.io/icefall/piper_phonemize.html"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
