[tool.uv]
cache-dir = ".uv-cache"
# Use find-links for piper-phonemize which has wheels on a separate index
find-links = ["https://k2-fsa.github.io/icefall/piper_phonemize.html"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mumble-tts-bot"
version = "0.1.0"
description = "A Mumble bot that reads text messages aloud using LuxTTS voice cloning"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Sam"}
]
keywords = ["mumble", "tts", "voice", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy<2.0",  # NeMo uses np.sctypes which was removed in NumPy 2.0
    "scipy",
    "protobuf>=6.0.0",
    "soundfile",
    "torch",
    "torchaudio",
    "transformers<=4.57.6",
    "huggingface-hub",
    "safetensors",
    "librosa",
    "pydub",
    "opuslib-next",
    # LuxTTS dependencies
    "lhotse",
    "tensorboard",
    "vocos",
    "onnxruntime",
    # Normalization
    "cn2an",
    "inflect",
    # Tokenization
    "jieba",
    "pypinyin",
    "piper-phonemize",
    "setuptools<81",
    # LinaCodec dependencies
    "jsonargparse[signatures]",
    "tqdm",
    # LLM integration
    "httpx>=0.27",
    "pyyaml>=6.0",
    # Wyoming protocol
    "wyoming>=1.5.0",
    # Nemotron ASR
    "nemo_toolkit[asr]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Streaming ASR providers (for low-latency speech recognition)
nemotron = [
    "nemo_toolkit[asr]>=2.0.0",
]
sherpa = [
    "sherpa-onnx>=1.10.0",
]
# Install all streaming ASR options
streaming-asr = [
    "nemo_toolkit[asr]>=2.0.0",
    "sherpa-onnx>=1.10.0",
]

[project.scripts]
mumble-tts-bot = "mumble_tts_bot:main"
wyoming-luxtts = "mumble_voice_bot.providers.wyoming_tts_server:main"

[tool.setuptools]
py-modules = ["mumble_tts_bot"]
packages = ["mumble_voice_bot", "mumble_voice_bot.interfaces", "mumble_voice_bot.providers"]
# Include vendored pymumble_py3 in the package path
package-dir = {"pymumble_py3" = "vendor/botamusique/pymumble_py3"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=7.0.0",
    "vulture>=2.14",
]

[tool.ruff]
# Exclude vendored code
exclude = ["vendor/", "nix/"]
line-length = 120

[tool.ruff.lint]
# E402: module level import not at top (needed for sys.path manipulation)
# F401: unused import (some kept for re-export or type checking)
per-file-ignores = {"mumble_tts_bot.py" = ["E402"]}
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by line-length setting

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["vendor/", "nix/"]
